# csgo_fitmat

./: .gitignore  CMakeLists.txt  display.cpp  display.h  displaysetting.cpp  displaysetting.h  main.cpp  main.qml
